# fpl-ai

./: .env.example  .gitignore  LICENSE  README.md  api.py  data.py  main.ipynb  main.py  optimize.py  pyproject.toml  requirements.txt  setup.sh  simulate.py  train.py  tune.py
api/: fpl.py  understat.py
datautil/: betting.py  clubelo.py  constants.py  footballdata.py  fpl.py  injecting.py  merged.py  merging.py  pipeline.py  theoddsapi.py  understat.py  upcoming.py  utilities.py  utils.py  wrangling.py
datautil/fetch/: clubelo.py  fpl.py  fplcache.py  understat.py
datautil/load/: clubelo.py  fpl.py  fplcache.py  merged.py  understat.py
datautil/loading/: fpl.py  understat.py
features/: availability.py  balanced_mean.py  balanced_rolling_mean.py  base.py  clb_features.py  contribution.py  depth_rank.py  depth_unavailability.py  engineer_features.py  fatigue.py  features.py  imputed_last_season_mean.py  imputed_set_piece_order.py  last_season_mean.py  last_season_std.py  minutes_category.py  one_hot_minutes_category.py  overperformance.py  per_90.py  pipeline.py  previous_season_mean.py  record_count.py  relative_strength.py  rolling.py  rolling_mean.py  rolling_std.py  share.py  toa_features.py  utilities.py
game/: rules.py  run.py  utils.py
loaders/: clubelo.py  constants.py  fpl.py  merged.py  theoddsapi.py  understat.py  upcoming.py  utils.py
model/: features.json  model.pkl
optimization/: optimize.py  parameters.py  rules.py  solver.py  tune.py
optimize/: __init__.py  greedy.py  parameters.py  tuning.py  utilities.py
prediction/: assists.py  bonus.py  bps.py  clean_sheets.py  clearances_blocks_interceptions.py  defensive_contribution.py  goals_conceded.py  goals_scored.py  match.py  minutes.py  model.py  predict.py  recoveries.py  saves.py  tackles.py  team_goals_scored.py  total_points.py  train.py  utils.py
predictions/: __init__.py
simulation/: __init__.py  loaders.py  simulate.py  simulator.py  utilities.py  utils.py
tests/: test_common_features.py  test_datautil.py  test_features.py  test_optimize.py  test_player_features.py  test_predictions.py  test_simulation.py  test_team_features.py  utilities.py
(+37 files in other folders)
