[project]
name = "fpl-ai"
version = "0.1.0"
description = "An AI for Fantasy Premier League"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "numpy>=2.4.2",
    "ortools>=9.15.6755",
    "polars>=1.38.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "optuna>=4.7.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
